--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.4.11",
     "maplibre-gl": "^5.2.0",
     "next": "15.2.1",
     "papaparse": "^5.5.2",
